--- a/Maidan/Maidan/Views/Shared/_Layout.cshtml
+++ b/Maidan/Maidan/Views/Shared/_Layout.cshtml
@@ -43,10 +43,10 @@
                             <a class="nav-link" href="post.html">Membership</a>
                         </li>
                         <li class="nav-item m-2">
-                            <a class="nav-link btn btn-warning" asp-action="SignUp" asp-controller="Author">Sign Up</a>
+                            <a class="nav-link btn btn-warning" asp-action="SignUp" asp-controller="Home">Sign Up</a>
                         </li>
                         <li class="nav-item m-2">
-                            <a class="nav-link btn btn-success" asp-action="SignIn">Sign In</a>
+                            <a class="nav-link btn btn-success" asp-action="SignIn" asp-controller="Home">Sign In</a>
                         </li>
                     </ul>
                     <!-- End Menu -->
