--- a/Maidan/Maidan/Views/Home/SignIn.cshtml
+++ b/Maidan/Maidan/Views/Home/SignIn.cshtml
@@ -1,20 +1,27 @@
 ﻿@using Maidan.Models.AuthenticationModels;
 @model SignInViewModel
 @{
-    if (TempData["ValidateMessage"]!=null)
+    if (TempData["Message"] != null)
     {
         <div class="alert alert-success" role="alert">
-            @TempData["ValidateMessage"]
+            @TempData["Message"]
         </div>
     }
 }
-<form asp-controller="Home" asp-action="SignIn" method="post">
-    <input type="email" placeholder="email address" asp-for="Email"/>
-    <input type="password" placeholder="password" asp-for="Password"/>
-
-    <label>
-        <input type="checkbox" asp-for="RememberMe"/>
-        Remembe Me
-    </label>
-    <button type="submit">Sign In</button>
-</form>
+<div class="text-center">
+    <form class="form-signin col-md-4" method="post">
+        <img class="mb-4" src="/assets/img/logo.png" alt="" width="50" height="50">
+        <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+        <label for="inputEmail" class="sr-only">Email address</label>
+        <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required="" autofocus="" asp-for="Email">
+        <label for="inputPassword" class="sr-only">Pa ssword</label>
+        <input type="password" id="inputPassword" class="form-control" placeholder="Password" required="" asp-for="Password">
+        <div class="checkbox mb-3">
+            <label>
+                <input type="checkbox" value="remember-me" asp-for="RememberMe"> Remember me
+            </label>
+        </div>
+        <button class="btn btn-lg btn-primary btn-block" type="submit" asp-controller="Home" asp-action="SignIn">Sign in</button>
+        <p class="mt-5 mb-3 text-muted">© 2023-2024</p>
+    </form>
+</div>
