--- a/Maidan/Maidan/Views/Home/SignUp.cshtml
+++ b/Maidan/Maidan/Views/Home/SignUp.cshtml
@@ -1,4 +1,4 @@
-﻿@model Maidan.Models.ViewModels.AppUser
+﻿@model Maidan.Models.ViewModels.SignUpViewModel
 
 @{
     ViewData["Title"] = "Sign Up maidan.";
