IdentityUser Author'a aktarıldı.Update Article tamamlandı.

--- a/Maidan/Maidan/Views/Member/CreateArticle.cshtml
+++ b/Maidan/Maidan/Views/Member/CreateArticle.cshtml
@@ -1,4 +1,4 @@
-﻿@model CreateArticleViewModel
+﻿@model ArticleViewModel
 
 <form asp-action="CreateArticle" asp-controller="Member">
     <div class="form-group">
