--- a/Maidan/Maidan/Views/Shared/_Layout.cshtml
+++ b/Maidan/Maidan/Views/Shared/_Layout.cshtml
@@ -39,15 +39,16 @@
 </body>
 <!-- Begin Footer
    ================================================== -->
-<footer class="footer">
-    <p class="pull-left">
-        Copyright &copy; 2017 Your Website Name
-    </p>
-    <p class="pull-right">
-        Mediumish Theme by <a target="_blank" href="https://www.wowthemes.net">WowThemes.net</a>
-    </p>
-    <div class="clearfix">
+<footer class="container footer position-static">
+    <div>
+        <p class="pull-left">
+            Copyright &copy; 2017 Your Website Name
+        </p>
+        <p class="pull-right">
+            Mediumish Theme by <a target="_blank" href="https://www.wowthemes.net">WowThemes.net</a>
+        </p>
     </div>
+    
 </footer>
 <!-- End Footer
 ================================================== -->
