--- a/Maidan/Maidan/Views/Home/SignIn.cshtml
+++ b/Maidan/Maidan/Views/Home/SignIn.cshtml
@@ -8,8 +8,9 @@
         </div>
     }
 }
-<div class="text-center">
-    <form class="form-signin col-md-4" method="post">
+<div class="row">
+    <div class="col-md-4 offset-4">
+    <form class="form-signin text-center" method="post">
         <img class="mb-4" src="/assets/img/logo.png" alt="" width="50" height="50">
         <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
         <label for="inputEmail" class="sr-only">Email address</label>
@@ -24,4 +25,5 @@
         <button class="btn btn-lg btn-primary btn-block" type="submit" asp-controller="Home" asp-action="SignIn">Sign in</button>
         <p class="mt-5 mb-3 text-muted">© 2023-2024</p>
     </form>
+</div>
 </div>
