--- a/Maidan/Maidan/Views/Member/GetArticle.cshtml
+++ b/Maidan/Maidan/Views/Member/GetArticle.cshtml
@@ -63,7 +63,7 @@
 				
 						<h1 class="posttitle">@Model.Title</h1>
 
-						<img class="featured-image img-fluid" src="/images/articleImages/default-article-image.jpg" alt="">
+						<img class="featured-image img-fluid" src="/images/articleImages/@Model.Image" alt="">
 
 						<!-- Begin Post Content -->
 						<div class="article-post">
