--- a/Maidan/Maidan/Views/Member/CreateArticle.cshtml
+++ b/Maidan/Maidan/Views/Member/CreateArticle.cshtml
@@ -1,20 +1,25 @@
 ﻿@model ArticleViewModel
 
-<form asp-action="CreateArticle" asp-controller="Member" method="post" enctype="multipart/form-data">
-    <div class="form-group">
-        <label asp-for="Title"></label>
-        <input asp-for="Title">
-        <span asp-validation-for="Title"></span>
+<div class="container">
+    <div class="row">
+        <form asp-action="CreateArticle" asp-controller="Member" method="post" enctype="multipart/form-data">
+            <div class="form-group">
+                <label asp-for="Title"></label>
+                <input asp-for="Title">
+                <span asp-validation-for="Title"></span>
 
+            </div>
+            <div class="form-group">
+                <label asp-for="Content"></label>
+                <textarea asp-for="Content"></textarea>
+                <span asp-validation-for="Content"></span>
+            </div>
+            <div class="form-group">
+                <label for="photo" class="control-label">Choose image:</label>
+                <input id="photo" name="photo" type="file" class="form-control" />
+            </div>
+            <button type="submit" value="Add Article" class="btn btn-success"></button>
+        </form>
     </div>
-    <div class="form-group">
-        <label asp-for="Content"></label>
-        <textarea asp-for="Content"></textarea>
-        <span asp-validation-for="Content"></span>
-    </div>
-    <div class="form-group">
-        <label for="photo" class="control-label">Choose image:</label>
-        <input id="photo" name="photo" type="file" class="form-control" />
-    </div>
-    <button type="submit" value="Add Article" class="btn btn-success"></button>
-</form>
+</div>
+
