--- a/Maidan/Maidan/Views/Shared/_NavBarPartialView.cshtml
+++ b/Maidan/Maidan/Views/Shared/_NavBarPartialView.cshtml
@@ -70,10 +70,13 @@
                     <!-- Begin Menu -->
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item m-2">
-                            <a class="nav-link" href="index.html">AboutUs<span class="sr-only">(current)</span></a>
+                            <a class="nav-link" asp-action="AboutUs" asp-controller="Home">AboutUs<span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item m-2">
-                            <a class="nav-link" href="post.html">Membership</a>
+                            <a class="nav-link" asp-action="Membership" asp-controller="Home">Membership</a>
+                        </li>
+                        <li class="nav-item m-2">
+                            <a class="nav-link" asp-action="ListTags" asp-controller="Home">Tags</a>
                         </li>
                         <li class="nav-item m-2">
                             <a class="nav-link btn btn-warning" asp-action="SignUp" asp-controller="Home">Sign Up</a>
