Admin tarafında kullanıcı silme güncelleme işlemi tamamlandı.

--- a/Maidan/Maidan/Views/Shared/_LayoutAdmin.cshtml
+++ b/Maidan/Maidan/Views/Shared/_LayoutAdmin.cshtml
@@ -24,6 +24,7 @@
                     <li><a href="#" class="nav-link px-2 link-dark">Products</a></li>
                     <li><a asp-action="AddTag" asp-controller="Admin" asp-area="Admin" class="nav-link px-2 link-dark">Add New Tag</a></li>
                     <li><a asp-action="ListTags" asp-controller="Admin" asp-area="Admin" class="nav-link px-2 link-dark">Tags List</a></li>
+                    <li><a asp-action="ListUsers" asp-controller="Admin" asp-area="Admin" class="nav-link px-2 link-dark">Users List</a></li>
                 </ul>
 
                 <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
