Kullanıcı ile Tag arasında bağlantı kuruldu, database' e yansıtıldı.

--- a/Maidan/Maidan/Areas/Admin/_ViewImports.cshtml
+++ b/Maidan/Maidan/Areas/Admin/_ViewImports.cshtml
@@ -1,5 +1,4 @@
 ﻿@using Maidan
 @using Maidan.Models
-@using Maidan.Models.ViewModels;
-@using Maidan.Areas.Admin.Models.ViewModels;
+@using Maidan.Areas.Admin.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
