--- a/Maidan/Maidan/Areas/Admin/Views/Admin/ListUsers.cshtml
+++ b/Maidan/Maidan/Areas/Admin/Views/Admin/ListUsers.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Maidan.Areas.Admin.Models.ViewModels.UserViewModel>
+﻿@model IEnumerable<UserViewModel>
 
 @{
     ViewData["Title"] = "ListUsers";
