--- a/Maidan/Maidan/Views/Home/SignIn.cshtml
+++ b/Maidan/Maidan/Views/Home/SignIn.cshtml
@@ -1,4 +1,5 @@
-﻿@using Maidan.Models.AuthenticationModels;
+﻿@using Maidan.ViewModels
+
 @model SignInViewModel
 @{
     if (TempData["Message"] != null)
