--- a/Maidan/Maidan/Views/_ViewImports.cshtml
+++ b/Maidan/Maidan/Views/_ViewImports.cshtml
@@ -1,4 +1,4 @@
 ﻿@using Maidan
 @using Maidan.Models
-@using Maidan.Models.ViewModels;
+@using Maidan.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
