--- a/Maidan/Maidan/Views/Shared/_Layout.cshtml
+++ b/Maidan/Maidan/Views/Shared/_Layout.cshtml
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Maidan.styles.css" asp-append-version="true" />
+
+    <!--Select2 Css File-->
+    <link href="/css/select2.min.css" rel="stylesheet" asp-append-version="true"/>
     
     <!-- Dışarıdan alınan -->
     <link rel="icon" href="/assets/img/favicon.ico" asp-append-version="true">
@@ -65,5 +68,8 @@
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
 <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 <script src="~/js/site.js" asp-append-version="true"></script>
+
+<!--Select2 JS File-->
+<script src="/js/select2.full.js" asp-append-version="true"></script>
 @await RenderSectionAsync("Scripts", required: false)
 </html>
