--- a/Maidan/Maidan/Views/Member/CreateArticle.cshtml
+++ b/Maidan/Maidan/Views/Member/CreateArticle.cshtml
@@ -1,5 +1,58 @@
 ﻿@model ArticleViewModel
+<style>
+    #tags {
+        padding: 0 20px
+    }
 
+        #tags:last-child {
+            border-bottom: 1px solid #BBB;
+        }
+
+        #tags > input {
+            display: none;
+        }
+
+        #tags i {
+            display: inline-block;
+            float: right;
+            padding: 2px;
+            width: 40px;
+            height: 20px;
+            border-radius: 13px;
+            vertical-align: middle;
+            -webkit-transition: .25s .09s;
+            transition: .25s .09s;
+            position: relative;
+            background: #d8d9db;
+            box-sizing: initial;
+        }
+
+            #tags i:after {
+                content: " ";
+                display: block;
+                width: 20px;
+                height: 20px;
+                border-radius: 50%;
+                background: #fff;
+                position: absolute;
+                left: 2px;
+                -webkit-transition: .25s;
+                transition: .25s;
+            }
+
+        #tags > input:checked + i {
+            background: #4bd865;
+        }
+
+            #tags > input:checked + i:after {
+                -webkit-transform: translateX(20px);
+                transform: translateX(20px);
+            }
+
+        #tags:hover {
+            cursor: pointer;
+        }
+</style>
 <div class="container">
     <div class="row">
         <form asp-action="CreateArticle" asp-controller="Member" method="post" enctype="multipart/form-data">
@@ -18,15 +71,36 @@
                 <label for="photo" class="control-label">Choose image:</label>
                 <input id="photo" name="photo" type="file" class="form-control" />
             </div>
-            <div>
-                <label asp-for="TagId" class="mb-1">Tags :</label>
-                <select class="form-select mb-3" aria-label="Default select example" asp-for="TagId" asp-items="@ViewBag.Tags">
-                    <option value="">Choose Tag</option>
-                </select>
-                <span class="text-danger" asp-validation-for="TagId"></span>
+            <div class="form-group">
+                <label id="tags" class="mb-1">
+                    <span style="padding-right:10px">Choose All / Clear</span>
+                    <input type="checkbox" id="chooseAll" /><i></i>
+                </label>
+                <select name="TagsList"
+                        id="select2"
+                        multiple="multiple"
+                        class="form-control"
+                        asp-items="ViewBag.Tags"></select>
             </div>
-            <button type="submit" value="Add Article" class="btn btn-success"></button>
+            <input type="submit" value="Add Article" class="btn btn-success my-2">
         </form>
     </div>
 </div>
+<script>
+    $(function () {
+        //select2 eklentimizin tanımı
+        $('#select2').select2();
+        //hepsiniSec kodlarımız
+        $("#chooseAll").on("click", function () {
+            if ($(this).is(':checked')) {
+                $("#select2 > option").prop("selected", "selected");
+                $("#select2").trigger("change");
+            }
+            else {
+                $("#select2 > option").removeAttr("selected");
+                $("#select2").trigger("change");
+            }
+        });
+    });
+</script>
 
