--- a/Maidan/Maidan/Views/Home/Index.cshtml
+++ b/Maidan/Maidan/Views/Home/Index.cshtml
@@ -1,25 +1,168 @@
 ﻿@model List<Article>
 @{
     ViewData["Title"] = "maidan.";
-    //List<Article> lastSixArticles = Model.OrderBy(a => a.ReleaseDate).Take(4).ToList();
-    List<Article> lastSixArticles = null;
+    List<Article> lastSixArticles = Model.OrderByDescending(a => a.UpdateDate).Take(6).ToList();
+    List<Article> top10Articles = Model.OrderByDescending(a => a.NumberOfReads).Take(10).ToList();
+    List<Author> authors = ViewBag.Authors;
 }
 <!-- Begin Site Title
 ================================================== -->
 
-<div class="mainheading">
-    <h1 class="sitetitle">Mediumish</h1>
-    <p class="lead">
-        Bootstrap theme, medium style, simply perfect for bloggers
-    </p>
+<div class="row rounded-pill" style="height:20rem; background-color:#FFC017">
+    <div class="col-md-8 d-flex flex-column justify-content-center">
+        <div class="row m-3">
+            <h1>Stay curious.</h1>
+        </div>
+        <div class="row m-3">
+            <h2>Discover stories, thinking, and expertise from writers on any topic.</h2>
+        </div>
+        <div class="row m-3">
+            <div class="col-md-4">
+                <form>
+                    <input asp-action="SignUp" type="submit" class="btn btn-dark rounded-pill btn-block" value="Join Maidan" asp-controller="Home" />
+                </form>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-4">
+        <img />
+    </div>
+
 </div>
 <!-- End Site Title
 ================================================== -->
+
+<div class="container my-2">
+    <h2>Trending on Ma<span style="color:#FFC017">i</span>dan.</h2>
+    <hr />
+</div>
+<div class="container my-2">
+    <div class="row">
+        <div class="col-md-9">
+            @{
+                foreach (var item in top10Articles)
+                {
+                    <div class="card my-4">
+                        <div class="card-header">
+                            <img src="~/images/authorImages/@item.Image" width="20" class="rounded-circle" /> @item.AuthorId
+                        </div>
+                        <div class="row">
+                            <div class="col-md-9">
+                                <div class="card-body">
+                                    <h5 class="card-title">@item.Title</h5>
+                                    <p class="card-text">
+                                        @{
+                                            if (item.Content.Length > 30)
+                                            {
+                                                @item.Content.Substring(0,30)
+                                            }
+                                            else
+                                            {
+                                                @item.Content
+                                            }
+                                        }
+                                    </p>
+                                    <a asp-action="GetArticle" class="btn btn-primary" asp-route-id="@item.Id">Go Article</a>
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+                                <img src="/images/articleImages/default-article-image.jpg" width="100%" />
+                            </div>
+                        </div>
+
+                        <div class="card-footer text-muted">
+                            @{
+                                foreach (var tag in item.Tags)
+                                {
+                                    <span><button class="btn btn-secondary rounded-pill">@tag.Name</button></span>
+                                }
+                            }
+                        </div>
+                    </div>
+                }
+            }
+        </div>
+@*        <div class="col-md-3">
+            @{
+                foreach (Tag item in ViewBag.Tags)
+                {
+                    <div class="row m-4">
+                    <a class="btn btn-success rounded-pill" asp-action="GetTagArticles">@item.Name</a>
+                    </div>
+                }
+            }
+        </div>*@
+    </div>
+    
+    <div class="row my-4 text-center">
+        <div><a class="btn btn-primary btn-block" asp-action="AllArticles">Load More Articles</a></div>
+    </div>
+</div>
+
+
+@*<div class="row my-4">
+    <h2>Hot Reload Posts</h2>
+    <hr />
+</div>
+<div class="container row my-4">
+    @{
+        foreach (var item in lastSixArticles)
+        {
+            <div class="col col-md-6">
+                <div class="card mb-3" style="max-width: 540px;">
+                    <div class="row no-gutters">
+                        <div class="col-md-4">
+                            <img src="/images/articleImages/@item.Image" class="card-img" alt="@item.Title">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body row">
+                                <h5 class="card-title">@item.Title</h5>
+                                <p class="card-text">
+                                    @{
+                                        if (@item.Content.Length > 300)
+                                        {
+                                            @item.Content.Substring(0, 300)
+                                        }
+                                        else
+                                        {
+                                            @item.Content
+                                        }
+                                    }
+                                </p>
+                                <p class="card-text"><small class="text-muted">Last updated @(Convert.ToInt32((item.UpdateDate-DateTime.Now).TotalMinutes)) mins ago</small></p>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-2 m-4">
+                                    <img src="/images/authorImages/default-author-image.png" width="40" />
+                                </div>
+                                <div class="col-md-10 m-2">
+                                    <span>@{
+                                            if (@item.AuthorId.Length>30)
+                                            {
+                                                @item.AuthorId.Substring(0,30)
+                                            }
+                                            else
+                                            {
+                                                @item.AuthorId
+                                            }
+                                        }</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        }
+    }
+</div>*@
+
+
+
 <!-- Begin Featured
 ================================================== -->
 <section class="featured-posts">
     <div class="section-title">
-        <h2><span>Featured</span></h2>
+        <h2><span>Hot Reload Posts</span></h2>
     </div>
     <div class="card-columns listfeaturedtag">
         @{
@@ -29,20 +172,20 @@
                 {
                     <div class="card m-2">
                         <div class="row">
-                            <div class="col-md-5 wrapthumbnail">
+                            <div class="col-md-4 wrapthumbnail">
                                 <a asp-action="GetArticle" asp-route-id="@article.Id">
-                                    <div class="thumbnail" style="background-image:url(/images/articleImages/default-article-image.jpg);">
+                                    <div class="thumbnail" style="background-image:url(/images/articleImages/@article.Image);">
                                     </div>
                                 </a>
                             </div>
-                            <div class="col-md-7">
+                            <div class="col-md-8">
                                 <div class="card-block">
                                     <h2 class="card-title"><a asp-action="GetArticle" asp-route-id="@article.Id">@article.Title</a></h2>
                                     <h4 class="card-text">
                                         @{
-                                            if (@article.Content.Length > 25)
+                                            if (@article.Content.Length > 300)
                                             {
-                                                @article.Content.Substring(0, 25)
+                                                @article.Content.Substring(0, 300)
                                             }
                                             else
                                             {
@@ -54,13 +197,13 @@
                                     <div class="metafooter">
                                         <div class="wrapfooter">
                                             <span class="meta-footer-thumb">
-                                                <a asp-action="GoAuthor" asp-controller="Home"><img class="author-thumb" src="/images/authorImages/default-author-image.png" alt="Author Avatar"></a>
+                                                <a asp-action="GetAuthor" asp-route-id="@article.AuthorId" asp-controller="Home"><img class="author-thumb" src="/images/authorImages/default-author-image.png" alt="Author Avatar"></a>
                                             </span>
                                             <span class="author-meta">
                                                 <span class="post-name"><a href="author.html">@article.AuthorId</a></span><br />
-                                                <span class="post-date">@article.ReleaseDate.ToShortDateString()</span><span class="dot"></span><span class="post-read">@article.TotalReadTime</span>
+                                                <span class="post-date">@article.ReleaseDate.ToShortDateString()</span><span class="dot"></span><span class="post-read">@article.TotalReadTime.ToString()</span>
                                             </span>
-                                            <span class="post-read-more"><a href="post.html" title="Read Story"><svg class="svgIcon-use" width="25" height="25" viewbox="0 0 25 25"><path d="M19 6c0-1.1-.9-2-2-2H8c-1.1 0-2 .9-2 2v14.66h.012c.01.103.045.204.12.285a.5.5 0 0 0 .706.03L12.5 16.85l5.662 4.126a.508.508 0 0 0 .708-.03.5.5 0 0 0 .118-.285H19V6zm-6.838 9.97L7 19.636V6c0-.55.45-1 1-1h9c.55 0 1 .45 1 1v13.637l-5.162-3.668a.49.49 0 0 0-.676 0z" fill-rule="evenodd"></path></svg></a></span>
+                                            <span class="post-read-more"><a asp-action="GetArticle" asp-route-id="@article.Id" title="Read Story"><svg class="svgIcon-use" width="25" height="25" viewbox="0 0 25 25"><path d="M19 6c0-1.1-.9-2-2-2H8c-1.1 0-2 .9-2 2v14.66h.012c.01.103.045.204.12.285a.5.5 0 0 0 .706.03L12.5 16.85l5.662 4.126a.508.508 0 0 0 .708-.03.5.5 0 0 0 .118-.285H19V6zm-6.838 9.97L7 19.636V6c0-.55.45-1 1-1h9c.55 0 1 .45 1 1v13.637l-5.162-3.668a.49.49 0 0 0-.676 0z" fill-rule="evenodd"></path></svg></a></span>
                                         </div>
                                     </div>
                                 </div>
@@ -76,9 +219,11 @@
 </section>
 <!-- End Featured
 ================================================== -->
+
+
 <!-- Begin List Posts
 ================================================== -->
-<section class="recent-posts">
+@*<section class="recent-posts">
     <div class="section-title">
         <h2><span>All Stories</span></h2>
     </div>
@@ -124,6 +269,6 @@
             }
         }
     </div>
-</section>
+</section>*@
 <!-- End List Posts
 ================================================== -->
