--- a/Maidan/Maidan/Views/Member/CreateArticle.cshtml
+++ b/Maidan/Maidan/Views/Member/CreateArticle.cshtml
@@ -1,58 +1,63 @@
 ﻿@model ArticleViewModel
-<style>
-    #tags {
-        padding: 0 20px
-    }
 
-        #tags:last-child {
-            border-bottom: 1px solid #BBB;
+@section Css{
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/css/select2.min.css" integrity="sha512-nMNlpuaDPrqlEls3IX/Q56H36qvBASwb3ipuo3MxeWbsQB1881ox0cRv7UPTgBlriqoynt35KjEwgGUeUXIPnw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <style>
+        #tags {
+            padding: 0 20px
         }
 
-        #tags > input {
-            display: none;
-        }
+            #tags:last-child {
+                border-bottom: 1px solid #BBB;
+            }
 
-        #tags i {
-            display: inline-block;
-            float: right;
-            padding: 2px;
-            width: 40px;
-            height: 20px;
-            border-radius: 13px;
-            vertical-align: middle;
-            -webkit-transition: .25s .09s;
-            transition: .25s .09s;
-            position: relative;
-            background: #d8d9db;
-            box-sizing: initial;
-        }
+            #tags > input {
+                display: none;
+            }
 
-            #tags i:after {
-                content: " ";
-                display: block;
-                width: 20px;
+            #tags i {
+                display: inline-block;
+                float: right;
+                padding: 2px;
+                width: 40px;
                 height: 20px;
-                border-radius: 50%;
-                background: #fff;
-                position: absolute;
-                left: 2px;
-                -webkit-transition: .25s;
-                transition: .25s;
+                border-radius: 13px;
+                vertical-align: middle;
+                -webkit-transition: .25s .09s;
+                transition: .25s .09s;
+                position: relative;
+                background: #d8d9db;
+                box-sizing: initial;
             }
 
-        #tags > input:checked + i {
-            background: #4bd865;
-        }
+                #tags i:after {
+                    content: " ";
+                    display: block;
+                    width: 20px;
+                    height: 20px;
+                    border-radius: 50%;
+                    background: #fff;
+                    position: absolute;
+                    left: 2px;
+                    -webkit-transition: .25s;
+                    transition: .25s;
+                }
 
-            #tags > input:checked + i:after {
-                -webkit-transform: translateX(20px);
-                transform: translateX(20px);
+            #tags > input:checked + i {
+                background: #4bd865;
             }
 
-        #tags:hover {
-            cursor: pointer;
-        }
-</style>
+                #tags > input:checked + i:after {
+                    -webkit-transform: translateX(20px);
+                    transform: translateX(20px);
+                }
+
+            #tags:hover {
+                cursor: pointer;
+            }
+    </style>
+}
+
 <div class="container">
     <div class="row">
         <form asp-action="CreateArticle" asp-controller="Member" method="post" enctype="multipart/form-data">
@@ -86,21 +91,27 @@
         </form>
     </div>
 </div>
-<script>
-    $(function () {
-        //select2 eklentimizin tanımı
-        $('#select2').select2();
-        //hepsiniSec kodlarımız
-        $("#chooseAll").on("click", function () {
-            if ($(this).is(':checked')) {
-                $("#select2 > option").prop("selected", "selected");
-                $("#select2").trigger("change");
-            }
-            else {
-                $("#select2 > option").removeAttr("selected");
-                $("#select2").trigger("change");
-            }
+
+@section Scripts{
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.full.min.js" integrity="sha512-RtZU3AyMVArmHLiW0suEZ9McadTdegwbgtiQl5Qqo9kunkVg1ofwueXD8/8wv3Af8jkME3DDe3yLfR8HSJfT2g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script>
+        $(function () {
+            //select2 eklentimizin tanımı
+            $('#select2').select2();
+            //hepsiniSec kodlarımız
+            $("#chooseAll").on("click", function () {
+                if ($(this).is(':checked')) {
+                    $("#select2 > option").prop("selected", "selected");
+                    $("#select2").trigger("change");
+                }
+                else {
+                    $("#select2 > option").removeAttr("selected");
+                    $("#select2").trigger("change");
+                }
+            });
         });
-    });
-</script>
+    </script>
+
+}
+
 
