--- a/Maidan/Maidan/Views/Member/DeleteArticle.cshtml
+++ b/Maidan/Maidan/Views/Member/DeleteArticle.cshtml
@@ -11,23 +11,41 @@
     <h4>ArticleViewModel</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Image)
+        </dt>
+        <dd class="col-sm-10">
+            <img src="/images/articleImages/
+            @{
+                if (!string.IsNullOrEmpty(Model.Image))
+                {
+                     @Model.Image
+
+                }
+                else
+                {
+                     @("default-article-image.jpg")
+
+                }
+             }" />
+        </dd>
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Title)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Title)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Content)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Content)
         </dd>
     </dl>
-    
+
     <form asp-action="DeleteArticle">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger"/> |
+        <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List Without Delete</a>
     </form>
 </div>
