--- a/Maidan/Maidan/Views/Member/MyProfile.cshtml
+++ b/Maidan/Maidan/Views/Member/MyProfile.cshtml
@@ -72,16 +72,47 @@
         </div>
     }
 }
+@{
+    if (TempData["ChangePassword"] != null && (TempData["ChangePassword"]).ToString().ToLower().Contains("success"))
+    {
+        <div class="alert alert-success">
+            <h3>@TempData["ChangePassword"]</h3>
+        </div>
+    }
+    else if (TempData["ChangePassword"] != null && (TempData["ChangePassword"]).ToString().ToLower().Contains("error"))
+    {
+        <div class="alert alert-danger">
+            <h3>@TempData["ChangePassword"]</h3>
+        </div>
+    }
+}
+@{
+    var photoPath = "default-author-image.png";
+    if (Model.Photo!=null)
+    {
+        photoPath = Model.Photo;
+    }
+}
 
-<h1>My Profile</h1>
+<h1 class="text-center">Your Profile Informations</h1>
 
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="MyProfile">
+        <form asp-action="MyProfile" method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
-            <input type="hidden" asp-for="PasswordHash" />
+            <div class="form-group">
+                <div class="row">
+                    <div class="col-md-4">
+                        <img src="/images/authorImages/@photoPath" width="100" class="rounded-circle"/>
+                    </div>
+                    <div class="col-md-8">
+                        <label for="photo" class="control-label">Choose Photo</label>
+                        <input id="photo" name="photo" type="file" class="form-control" />
+                    </div>
+                </div>
+            </div>
             <div class="form-group">
                 <label asp-for="UserName" class="control-label"></label>
                 <input asp-for="UserName" class="form-control" />
@@ -106,11 +137,6 @@
                 <label asp-for="LastName" class="control-label"></label>
                 <input asp-for="LastName" class="form-control" />
                 <span asp-validation-for="LastName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Photo" class="control-label"></label>
-                <input asp-for="Photo" class="form-control" />
-                <span asp-validation-for="Photo" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Bio" class="control-label"></label>
@@ -148,6 +174,17 @@
                 <span asp-validation-for="WebsiteUrl" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <h3>Your Interests</h3>
+                <ul class="list-unstyled">
+                    @{
+                        foreach (var item in Model.Tags)
+                        {
+                            <li class="btn btn-info rounded-pill">@item.Name</li>
+                        }
+                    }
+                </ul>
+            </div>
+            <div class="form-group">
                 <label id="tags" class="mb-1">
                     <span style="padding-right:10px">Choose All / Clear</span>
                     <input type="checkbox" id="chooseAll" /><i></i>
@@ -164,7 +201,9 @@
         </form>
     </div>
 </div>
-
+@*<div class="row">
+    <a asp-action="ChangePassword" asp-controller="Member" asp-route-id="@Model.Id">Do you want a change password?</a>
+</div>*@
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
