--- a/Maidan/Maidan/Views/Member/UpdateArticle.cshtml
+++ b/Maidan/Maidan/Views/Member/UpdateArticle.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="UpdateArticle">
+        <form asp-action="UpdateArticle" method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
@@ -22,6 +22,27 @@
                 <label asp-for="Content" class="control-label"></label>
                 <input asp-for="Content" class="form-control" />
                 <span asp-validation-for="Content" class="text-danger"></span>
+            </div>
+            <div class="row form-group">
+                <div class="col-md-4">
+                    <img src="/ images/articleImages/
+                    @{
+                        if (!string.IsNullOrEmpty(Model.Image))
+                        {
+                                 @Model.Image
+
+                        }
+                        else
+                        {
+                                 @("default-article-image.jpg")
+
+                        }
+                     }" />
+                </div>
+                <div class="col-md-8">
+                    <label for="photo" class="control-label">Choose image:</label>
+                    <input id="photo" name="photo" type="file" class="form-control" />
+                </div>
             </div>
             <div class="form-group">
                 <input type="submit" value="Update Article" class="btn btn-primary" />
