--- a/Maidan/Maidan/Views/Home/SignUp.cshtml
+++ b/Maidan/Maidan/Views/Home/SignUp.cshtml
@@ -13,8 +13,10 @@
     }
 }
 
-
-<h1 class="text-center">Sign Up</h1>
+<div class="row text-center my-3">
+    <h1 class="text-center">Sign Up</h1>
+    <hr />
+</div>
 
 
 <div class="row">
@@ -41,15 +43,15 @@
                 <input asp-for="PasswordConfirm" class="form-control" />
                 <span asp-validation-for="PasswordConfirm" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Sign Up" class="btn btn-primary" />
+            <div class="form-group text-center">
+                <input type="submit" value="Sign Up" class="btn btn-block" style="background-color:#FFC017" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index" asp-controller="Home">Back to Home Without Sign Up</a>
+    <a asp-action="Index" asp-controller="Home" class="btn btn-danger rounded-pill">Back to Home Without Sign Up</a>
 </div>
 
 @section Scripts {
