--- a/Maidan/Maidan/Views/Shared/_NavBarPartialView.cshtml
+++ b/Maidan/Maidan/Views/Shared/_NavBarPartialView.cshtml
@@ -7,7 +7,7 @@
             </button>
             <div class="container">
                 <!-- Begin Logo -->
-                <a class="navbar-brand" href="index.html">
+                <a class="navbar-brand" asp-action="Index">
                     <img src="/assets/img/logo.png" alt="logo">
                 </a>
                 <!-- Begin Search -->
@@ -24,7 +24,10 @@
                             <a class="nav-link" asp-action="CreateArticle" asp-controller="Member">Write a Article..</a>
                         </li>
                         <li class="nav-item m-2">
-                            <a class="nav-link" asp-action="Index" asp-controller="Member">My Articles</a>
+                            <a class="nav-link" asp-action="MyArticles" asp-controller="Member">My Articles</a>
+                        </li>
+                        <li class="nav-item m-2">
+                            <a class="nav-link" asp-action="Index" asp-controller="Member">All Articles</a>
                         </li>
                         <li class="nav-item m-2">
                             <a class="nav-link btn btn-warning" asp-action="SignOut" asp-controller="Member">Sign Out</a>
@@ -56,7 +59,7 @@
             </button>
             <div class="container">
                 <!-- Begin Logo -->
-                <a class="navbar-brand" href="index.html">
+                <a class="navbar-brand" asp-action="Index">
                     <img src="/assets/img/logo.png" alt="logo">
                 </a>
                 <!-- End Logo -->
