--- a/Maidan/Maidan/Views/Shared/_NavBarPartialView.cshtml
+++ b/Maidan/Maidan/Views/Shared/_NavBarPartialView.cshtml
@@ -27,7 +27,7 @@
                             <a class="nav-link" asp-action="MyArticles" asp-controller="Member">My Articles</a>
                         </li>
                         <li class="nav-item m-2">
-                            <a class="nav-link" asp-action="Index" asp-controller="Member">All Articles</a>
+                            <a class="nav-link" asp-action="AllArticles" asp-controller="Member">All Articles</a>
                         </li>
                         <li class="nav-item m-2">
                             <a class="nav-link btn btn-warning" asp-action="SignOut" asp-controller="Member">Sign Out</a>
