--- a/Maidan/Maidan/Views/Member/GetArticle.cshtml
+++ b/Maidan/Maidan/Views/Member/GetArticle.cshtml
@@ -53,9 +53,16 @@
                         <a href="author.html"><img class="author-thumb" src="/images/authorImages/default-author-image.png" alt="Author Image"></a>
                     </div>
                     <div class="col-md-10">
-                        <a class="link-dark" href="author.html">@author.UserName</a><a href="#" class="btn follow">Follow</a>
-                        <span class="author-description">@author.Bio</span>
-                        <span class="post-date">@Model.ReleaseDate</span><span class="dot"></span><span class="post-read">@Model.TotalReadTime</span>
+                        <div class="row">
+                            <a class="link-dark" href="author.html">@author.UserName</a><a href="#" class="btn follow">Follow</a>
+                        </div>
+                        <div class="row">
+                            <span class="author-description">@author.Bio</span>
+                        </div>
+                        <div class="row">
+                            <span class="post-date">@Model.ReleaseDate</span><span class="dot"></span><span class="post-read">@Model.TotalReadTime</span>
+                        </div>
+                        
                     </div>
                 </div>
 
